--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -11,4 +11,6 @@
     <string name="rb_day">デイモード</string>
     <string name="rb_night">ナイトモード</string>
     <string name="rb_custom">カスタムモード</string>
+    <string name="language">言語</string>
+    <string name="theme">テーマ</string>
 </resources>
